News card spacing fixup for mobile

--- a/src/scss/components/news-vertical-teaser/_news-vertical-teaser.scss
+++ b/src/scss/components/news-vertical-teaser/_news-vertical-teaser.scss
@@ -205,6 +205,8 @@
 
       &.su-list-unstyled>li {
         @include centered-column;
+
+        margin-bottom: 4.5rem;
       }
     }
 
